<resources>
    <string name="app_name">Troop</string>

    <!-- Actions -->
    <string name="action_get_started">Get Started</string>
    <string name="action_spotify_login">Login with Spotify</string>
    <string name="action_start_session">Start Session</string>
    <string name="action_skip">Skip</string>
    <string name="action_love">Love</string>
    <string name="action_help">Help</string>
    <string name="action_support">Support</string>
    <string name="action_recover">Recover</string>
    <string name="action_settings">Settings</string>
    <string name="menu_messages">History</string>

    <string name="title_activity_splash"></string>
    <string name="title_activity_login"></string>
    <string name="title_activity_session"></string>

    <string name="tagline">Get Fit with Friends</string>

    <string name="choose_music_login">Choose Your Music Provider</string>
    <string name="empty_message_list">No Messages</string>

    <string name="success_toast">Success</string>
    <string name="error_toast">Error. Please try again in a moment.</string>
    <string name="love_success_toast">Love Sent</string>
    <string name="help_success_toast">Asked for Help!</string>
    <string name="support_success_toast">Support Sent</string>
    <string name="recover_success_toast">You Recovered!</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>