<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    tools:context="com.linkedladies.troop.fragments.MessageActionsFragment">

    <Button
        android:id="@+id/btnLove"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/action_love" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/action_help" />

    <Button
        android:id="@+id/btnSupport"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/action_support" />

    <Button
        android:id="@+id/btnRecover"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/action_recover" />

</LinearLayout>
